--- a/.env
+++ b/.env
@@ -29,13 +29,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.googlemail.com
-MAIL_PORT=465
-MAIL_USERNAME=nengrusnia@gmail.com
-MAIL_PASSWORD=rekinaufal
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=halo.screening.indonesia@gmail.com
+MAIL_PASSWORD=yulqqprbnjlxfgog
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=halo.screening.indonesia@gmail.com
+MAIL_FROM_NAME=halo.screening.indonesia@gmail.com
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
